Correct spacing for page sections

--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,14 @@ a {
     flex: 1 1 0;
     flex-direction: row;
     justify-content: center;
-    padding: 0 10%;
+    padding: 5% 10%;
 }
 
-.content-container.header-section{
-    padding: 5px 10%;
+.header-section{
+    flex: 0 0 50px;
+    padding: 0 10%;
     background-color: #1f2937;
+    align-items: center;
 }
 
 
@@ -44,6 +46,7 @@ a {
     flex: 0 1 80%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 10px;
     
 }
